        place.
      + Split per-architecture kernel handling out of the postinst into one
        script per architecture, with an interface to the postinst that
        allows base-installer to pick a usable kernel even if the one it
        actually wants isn't on the CD. See kernel/README.
      + Add a test suite for kernel selection, only for alpha, arm, hppa,
        i386, powerpc, s390, and sparc so far. See kernel/tests/README.
      + Make sure all the kernels displayed in
        base-installer/kernel/which-kernel are usable.
    - Please DO NOT UPLOAD this to unstable until sarge has been released.
      Use the sarge branch.
    - Use chrp 2.4 kernel on all powerpc chrp* subarchitectures, even
      chrp-rs6k. The chrp-rs6k 2.4 kernel is to be removed.
    - Fix arch_get_kernel output on s390, and explicitly disallow -s390-tape
      and -s390x (documenting why).

 -- Frans Pop <aragorn@tiscali.nl>  Wed,  1 Dec 2004 14:53:07 +0100

base-installer (1.13) unstable; urgency=low

  * Bdale Garbee
    - fix up hppa clause in postinst to get kernel package name right for 2.6
  * Colin Watson
    - Install 2.4.27 apus kernels.
  * Updated translations:
    - Bulgarian (bg.po) by Ognyan Kulev
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by French Team
    - Hebrew (he.po) by Lior Kaplan
    - Hungarian (hu.po) by VEROK Istvan
    - Russian (ru.po) by Yuri Kozlov
    - Slovenian (sl.po) by Jure Čuhalev
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Colin Watson <cjwatson@debian.org>  Thu, 28 Oct 2004 18:23:34 +0100

base-installer (1.12) unstable; urgency=low

  * Frans Pop
    - Do not append '-speakup' to kernel version when setting
      trykernel for speakup. Closes: #275075

 -- Joey Hess <joeyh@debian.org>  Fri,  8 Oct 2004 19:52:41 -0400

base-installer (1.11) unstable; urgency=low

  * Updated translations: 
    - Welsh (cy.po) by Dafydd Harries