@@ -1,0 +1,12 @@
+system type		: SGI Indigo2
+processor		: 0
+cpu model		: R4400SC V5.0  FPU V0.0
+BogoMIPS		: 74.75
+byteorder		: big endian
+wait instruction	: no
+microsecond timers	: yes
+tlb_entries		: 48
+extra interrupt vector	: no
+hardware watchpoint	: yes
+VCED exceptions		: -874138444
+VCEI exceptions		: 62649881
